--- a/Prototype/Prototype.csproj
+++ b/Prototype/Prototype.csproj
@@ -9,4 +9,8 @@
     <PackageReference Include="System.Drawing.Common" Version="4.5.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="docs\" />
+  </ItemGroup>
+
 </Project>
